Fixed z-index problem for side content on Boxed component

--- a/styles/components/_boxed.scss
+++ b/styles/components/_boxed.scss
@@ -32,7 +32,6 @@ $boxed-sides-padding: $input-padding;
     @include display(flex);
     @include align-items(center);
     position: absolute;
-    z-index: 10;
     top: 0;
   }
 
